--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     <!-- IMPORTANT: must be an absolute, publicly accessible URL -->
     <meta
       property="og:image"
-      content="https://campusmap.ucmercedhub.com/images/ucm-maps-preview-2.jpg"
+      content="https://campusmap.ucmercedhub.com/maps/images/ucm-maps-preview-2.jpg"
     />
     <!-- Optional but helps some scrapers -->
     <meta
       property="og:image:secure_url"
-      content="https://campusmap.ucmercedhub.com/images/ucm-maps-preview-2.jpg"
+      content="https://campusmap.ucmercedhub.com/maps/images/ucm-maps-preview-2.jpg"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -48,12 +48,12 @@
     />
     <meta
       name="twitter:image"
-      content="https://campusmap.ucmercedhub.com/images/ucm-maps-preview-2.jpg"
+      content="https://campusmap.ucmercedhub.com/maps/images/ucm-maps-preview-2.jpg"
     />
-    <meta property="og:image" content="https://campusmap.ucmercedhub.com/images/ucm-maps-preview-2.jpg">
+    <meta property="og:image" content="https://campusmap.ucmercedhub.com/maps/images/ucm-maps-preview-2.jpg">
     <meta name="twitter:image:alt" content="UC Merced Interactive Maps Hub preview image" />
 
-    <link rel="icon" href="/images/favicon.ico" />
+    <link rel="icon" href="/maps/images/favicon.ico" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
     <style>
@@ -142,7 +142,7 @@
       .brand .logo {
         width: 34px;
         height: 34px;
-        background-image: url("/images/map.png");
+        background-image: url("/maps/images/map.png");
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
