--- a/maps/events/events.html
+++ b/maps/events/events.html
@@ -1,39 +1,71 @@
-<html lang="en"><head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>UC Merced Campus Events Map</title>
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#ffffff" />
 
-    <meta name="description" content="An interactive UC Merced campus map featuring real-time events, building information, and turn-by-turn walking directions.">
-    <link rel="canonical" href="https://ucmercedhub.com/">
-    <meta name="robots" content="index,follow">
+    <meta
+      name="description"
+      content="Browse real-time UC Merced events on an interactive campus map. Search locations, explore event details, and get turn-by-turn walking directions."
+    />
+    <meta name="robots" content="index,follow" />
 
-    <meta property="og:site_name" content="UC Merced Campus Map">
-    <meta property="og:locale" content="en_US">
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://campusmap.ucmercedhub.com/events" />
 
-    <meta property="og:image" content="https://ucmercedhub.com/og-map-image.jpg">
-    <meta property="og:image:secure_url" content="https://ucmercedhub.com/og-map-image.jpg">
-    <meta property="og:image:type" content="image/jpeg">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="UC Merced Campus Events Map" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:title" content="UC Merced Campus Events Map" />
+    <meta
+      property="og:description"
+      content="Browse real-time UC Merced events on an interactive campus map. Search locations, explore event details, and get turn-by-turn walking directions."
+    />
+    <meta property="og:url" content="https://campusmap.ucmercedhub.com/events" />
 
-    <meta name="twitter:site" content="@UCMcampusmap">
-    <meta name="twitter:creator" content="@UCMcampusmap">
+    <!-- Preview Image (absolute URL, publicly accessible) -->
+    <meta
+      property="og:image"
+      content="https://campusmap.ucmercedhub.com/maps/images/ucm-maps-preview-2.jpg"
+    />
+    <meta
+      property="og:image:secure_url"
+      content="https://campusmap.ucmercedhub.com/maps/images/ucm-maps-preview-2.jpg"
+    />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta
+      property="og:image:alt"
+      content="UC Merced Campus Events Map preview image"
+    />
 
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://ucmercedhub.com/">
-    <meta property="og:title" content="UC Merced Campus Events Map">
-    <meta property="og:description" content="Navigate UC Merced with ease. Find real-time events, locate buildings, and get turn-by-turn directions.">
-    <meta property="og:image:alt" content="UC Merced Interactive Map Interface">
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="UC Merced Campus Events Map" />
+    <meta
+      name="twitter:description"
+      content="Browse real-time UC Merced events on an interactive campus map. Search locations, explore event details, and get turn-by-turn walking directions."
+    />
+    <meta
+      name="twitter:image"
+      content="https://campusmap.ucmercedhub.com/maps/images/ucm-maps-preview-2.jpg"
+    />
+    <meta
+      name="twitter:image:alt"
+      content="UC Merced Campus Events Map preview image"
+    />
 
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="UC Merced Campus Events Map">
-    <meta name="twitter:description" content="Navigate UC Merced with ease. Find real-time events, locate buildings, and get turn-by-turn directions.">
-    <meta name="twitter:image" content="https://ucmercedhub.com/og-map-image.jpg">
+    <!-- Optional: only keep these if you actually own/use this handle -->
+    <!-- <meta name="twitter:site" content="@UCMcampusmap" /> -->
+    <!-- <meta name="twitter:creator" content="@UCMcampusmap" /> -->
 
-    <link rel="icon" href="/maps/images/favicon.ico">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="icon" href="/maps/images/favicon.ico" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
     <!-- Light mode only -->
     <style>
