Update Open Graph and Twitter Card meta

--- a/maps/events/events.html
+++ b/maps/events/events.html
@@ -13,7 +13,7 @@
     />
     <meta name="robots" content="index,follow" />
 
-    <!-- Canonical URL -->
+    <!-- Canonical -->
     <link rel="canonical" href="https://campusmap.ucmercedhub.com/events" />
 
     <!-- Open Graph -->
@@ -27,21 +27,18 @@
     />
     <meta property="og:url" content="https://campusmap.ucmercedhub.com/events" />
 
-    <!-- Preview Image (absolute URL, publicly accessible) -->
-    <meta
-      property="og:image"
-      content="https://campusmap.ucmercedhub.com/maps/images/ucm-maps-preview-2.jpg"
-    />
+    <!-- Cross-domain preview image is OK -->
+    <meta property="og:image" content="https://ucmercedhub.com/og-image.jpg" />
     <meta
       property="og:image:secure_url"
-      content="https://campusmap.ucmercedhub.com/maps/images/ucm-maps-preview-2.jpg"
+      content="https://ucmercedhub.com/og-image.jpg"
     />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta
       property="og:image:alt"
-      content="UC Merced Campus Events Map preview image"
+      content="UC Merced Hub preview image"
     />
 
     <!-- Twitter Cards -->
@@ -51,18 +48,11 @@
       name="twitter:description"
       content="Browse real-time UC Merced events on an interactive campus map. Search locations, explore event details, and get turn-by-turn walking directions."
     />
-    <meta
-      name="twitter:image"
-      content="https://campusmap.ucmercedhub.com/maps/images/ucm-maps-preview-2.jpg"
-    />
+    <meta name="twitter:image" content="https://ucmercedhub.com/og-image.jpg" />
     <meta
       name="twitter:image:alt"
-      content="UC Merced Campus Events Map preview image"
+      content="UC Merced Hub preview image"
     />
-
-    <!-- Optional: only keep these if you actually own/use this handle -->
-    <!-- <meta name="twitter:site" content="@UCMcampusmap" /> -->
-    <!-- <meta name="twitter:creator" content="@UCMcampusmap" /> -->
 
     <link rel="icon" href="/maps/images/favicon.ico" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
