--- a/maps/construction/construction.html
+++ b/maps/construction/construction.html
@@ -4,6 +4,55 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UC Merced Major Projects</title>
+
+<meta name="theme-color" content="#ffffff" />
+
+    <meta
+      name="description"
+      content="A UC Merced-themed hub for interactive maps and campus insights, including real-time events, daily crime & fire logs, planned/under-construction projects, and residence halls."
+    />
+    <meta name="robots" content="index,follow" />
+
+    <!-- Canonical URL (recommended) -->
+    <link rel="canonical" href="https://campusmap.ucmercedhub.com/construction/" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="UC Merced Interactive Construction Map" />
+    <meta
+      property="og:description"
+      content="Explore UC Merced through interactive maps: events, daily crime & fire logs, planned/under-construction projects, and residence halls."
+    />
+    <meta property="og:url" content="https://campusmap.ucmercedhub.com/construction/" />
+
+    <!-- IMPORTANT: must be an absolute, publicly accessible URL -->
+    <meta
+      property="og:image"
+      content="https://campusmap.ucmercedhub.com/maps/images/ucm-maps-preview-2.jpg"
+    />
+    <!-- Optional but helps some scrapers -->
+    <meta
+      property="og:image:secure_url"
+      content="https://campusmap.ucmercedhub.com/maps/images/ucm-maps-preview-2.jpg"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="UC Merced Interactive Construction Map preview image" />
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="UC Merced Interactive Construction Map" />
+    <meta
+      name="twitter:description"
+      content="Explore UC Merced through interactive maps: events, daily crime & fire logs, planned/under-construction projects, and residence halls."
+    />
+    <meta
+      name="twitter:image"
+      content="https://campusmap.ucmercedhub.com/maps/images/ucm-maps-preview-2.jpg"
+    />
+    <meta property="og:image" content="https://campusmap.ucmercedhub.com/maps/images/ucm-maps-preview-2.jpg">
+    <meta name="twitter:image:alt" content="UC Merced Interactive Construction Map preview image" />
+    
     <style>
       :root {
         --ucm-blue: #005587;
