Update crimelogs.html to include meta tags

--- a/maps/crimelogs/crimelogs.html
+++ b/maps/crimelogs/crimelogs.html
@@ -4,6 +4,54 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+<meta name="theme-color" content="#ffffff" />
+
+    <meta
+      name="description"
+      content="A UC Merced-themed hub for interactive maps and campus insights, including real-time events, daily crime & fire logs, planned/under-construction projects, and residence halls."
+    />
+    <meta name="robots" content="index,follow" />
+
+    <!-- Canonical URL (recommended) -->
+    <link rel="canonical" href="https://campusmap.ucmercedhub.com/crimelogs/" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="UC Merced Interactive Crime & Fire Map" />
+    <meta
+      property="og:description"
+      content="Explore UC Merced through interactive maps: events, daily crime & fire logs, planned/under-construction projects, and residence halls."
+    />
+    <meta property="og:url" content="https://campusmap.ucmercedhub.com/crimelogs/" />
+
+    <!-- IMPORTANT: must be an absolute, publicly accessible URL -->
+    <meta
+      property="og:image"
+      content="https://campusmap.ucmercedhub.com/maps/images/ucm-maps-preview-2.jpg"
+    />
+    <!-- Optional but helps some scrapers -->
+    <meta
+      property="og:image:secure_url"
+      content="https://campusmap.ucmercedhub.com/maps/images/ucm-maps-preview-2.jpg"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="UC Merced Interactive Crime & Fire Map preview image" />
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="UC Merced Interactive Construction Map" />
+    <meta
+      name="twitter:description"
+      content="Explore UC Merced through interactive maps: events, daily crime & fire logs, planned/under-construction projects, and residence halls."
+    />
+    <meta
+      name="twitter:image"
+      content="https://campusmap.ucmercedhub.com/maps/images/ucm-maps-preview-2.jpg"
+    />
+    <meta property="og:image" content="https://campusmap.ucmercedhub.com/maps/images/ucm-maps-preview-2.jpg">
+    <meta name="twitter:image:alt" content="UC Merced Interactive Crime & Fire Map preview image" />
+    
     <title>UC Merced Daily Crime & Fire Log Map</title>
 
     <!-- A darker, “crime log” forward theme color (mobile browser UI) -->
