Update events.html to include meta tags

--- a/maps/events/events.html
+++ b/maps/events/events.html
@@ -9,6 +9,52 @@
 
     <meta
       name="description"
+      content="A UC Merced-themed hub for interactive maps and campus insights, including real-time events, daily crime & fire logs, planned/under-construction projects, and residence halls."
+    />
+    <meta name="robots" content="index,follow" />
+
+    <!-- Canonical URL (recommended) -->
+    <link rel="canonical" href="https://campusmap.ucmercedhub.com/events/" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="UC Merced Interactive Events Map" />
+    <meta
+      property="og:description"
+      content="Explore UC Merced through interactive maps: events, daily crime & fire logs, planned/under-construction projects, and residence halls."
+    />
+    <meta property="og:url" content="https://campusmap.ucmercedhub.com/events/" />
+
+    <!-- IMPORTANT: must be an absolute, publicly accessible URL -->
+    <meta
+      property="og:image"
+      content="https://campusmap.ucmercedhub.com/maps/images/ucm-maps-preview-2.jpg"
+    />
+    <!-- Optional but helps some scrapers -->
+    <meta
+      property="og:image:secure_url"
+      content="https://campusmap.ucmercedhub.com/maps/images/ucm-maps-preview-2.jpg"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="UC Merced Interactive Events Map preview image" />
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="UC Merced Interactive Events Map" />
+    <meta
+      name="twitter:description"
+      content="Explore UC Merced through interactive maps: events, daily crime & fire logs, planned/under-construction projects, and residence halls."
+    />
+    <meta
+      name="twitter:image"
+      content="https://campusmap.ucmercedhub.com/maps/images/ucm-maps-preview-2.jpg"
+    />
+    <meta property="og:image" content="https://campusmap.ucmercedhub.com/maps/images/ucm-maps-preview-2.jpg">
+    <meta name="twitter:image:alt" content="UC Merced Interactive Events Map preview image" />
+    
+    <meta
+      name="description"
       content="Browse real-time UC Merced events on an interactive campus map. Search locations, explore event details, and get turn-by-turn walking directions."
     />
     <meta name="robots" content="index,follow" />
