added privacy_policy and support page, small wording

--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
             </span>
           </div>
 
-          <h1 id="hero-title">A single place to explore UC Merced—visually.</h1>
+          <h1 id="hero-title">A single place to explore UC Merced visually.</h1>
           <p>
             This hub organizes interactive maps that make campus information easier to discover at a glance.
             Start with the live events map, browse daily crime &amp; fire logs, review planned/under-construction
@@ -728,8 +728,8 @@
 
             <h2 id="events-title">Campus Map + Events</h2>
             <p>
-              Explore UC Merced on an interactive map and see what’s happening around campus in real time. Designed for
-              quick discovery—tap locations, scan events, and navigate visually.
+              Explore UC Merced on an interactive map and see what's happening around campus in real time. Designed for
+              quick discovery-tap locations, scan events, and navigate visually.
             </p>
 
             <div class="card-actions">
@@ -866,7 +866,7 @@
         </h2>
         <p style="margin: 0; color: var(--muted); max-width: 75ch;">
           UC Merced has a lot of useful information spread across different pages and formats. This project aims to make
-          that information easier to explore by organizing it into interactive maps and simple views—so you can
+          that information easier to explore by organizing it into interactive maps and simple views-so you can
           understand what’s going on quickly, without digging.
         </p>
       </section>
@@ -960,6 +960,37 @@
               </div>
             </div>
           </div>
+
+            <div class="team-member" tabindex="0">
+            <div class="team-member-inner">
+              <div class="team-member-front">
+                <div class="member-avatar">
+                  <img
+                    src="/maps/images/people/flavio_herrera.png"
+                    alt="Flavio Herrera"
+                    class="member-photo"
+                    loading="lazy"
+                  />
+                  <div class="member-initials" role="img" aria-label=""></div>
+                </div>
+
+                <span class="member-role">Collaborator</span>
+                <span class="member-name">Amy Chan</span>
+                <p class="member-short-desc">Project Advisor</p>
+                <div class="flip-hint">⟳ Tap for details</div>
+              </div>
+              <div class="team-member-back">
+                <div class="member-back-title">Contributions</div>
+                <ul class="member-contributions">
+                  <li>Provides strategic guidance and direction</li>
+                  <li>Contributes ideas, brainstorming, and feedback</li>
+                  <li>Shares expertise, resources, and key contacts</li>
+                </ul>
+                <div class="flip-hint">⟲ Tap to return</div>
+              </div>
+            </div>
+          </div>
+
         </div>
       </section>
     </main>
